--- a/bluefish/data/highlighting.in
+++ b/bluefish/data/highlighting.in
@@ -1,19 +1,20 @@
-c:string:0:":":1::#009900::0:0:
-c:string-escape:0:\\\\(n|t|v|b|r|f|a|\\\\|\\?|'|"|\\d{1,3}|x\\d+)::2:^string$:#990099::0:0:
-c:preprocessor:0:#(include|define|if(def|ndef)?|else|elif|endif|undef)::2::#990099::0:0:
-c:comment:0:/\\*:\\*/:1:^(top|preprocessor)$:#0000FF::1:2:
-c:keywords:0:\\b(break|case|continue|default|do|else|for|goto|if|return|sizeof|switch|while)\\b::2::#009999::2:0:
-c:storage-keywords:0:\\b(auto|char|const|double|enum|extern|FILE|float|int(8|16|32|64)?|long|register|short|signed|size_t|static|struct|typedef|union|unsigned|void|volatile)\\b::2::#000099::2:0:
-c:gtk-keywords:0:\\b(Gtk(Widget|AccelLabel|AccelGroup|AccelMap|Accessible|Action|ActionEntry|ActionGroup|Adjustment|Alignment|Arrow|AspectFrame|Bin|Box|Button|ButtonBox|Calendar|CellEditable|CellRenderer|CellRenderPixbuf|CellRendererText|CellRendererToggle|CheckButton|Clipboard|CList|ColorButton|ColorSelection|ColorSelectionDialog|Combo|ComboBox|ComboBoxEntry|Container|CTree|Curve|Dialog|DrawingArea|Editable|Entry|EventBox|FileChooserAction|FileFilter|FileFilterFlags|FileSelectionDialog|Fixed|FontButton|FontSelection|FontSelectionDialog|Frame|GammaCurve|HandleBox|HBox|HButtonBox|HPaned|HRuler|HScale|HScrollbar|HSeparator|IconFactory|IconSet|IconSource|Image|ImageMenuItem|IMContext|IMContextSimple|IMMulticontext|InputDialog|Invisible|ItemFactory|ItemFactoryEntry|Label|Layout|List|ListItem|ListStore|Menu|MenuBar|MenuItem|MenuShell|MessageDialog|Misc|Notebook|Object|OldEditable|OptionMenu|Paned|Pixmap|Plug|Preview|Progress|ProgressBar|RadioActionEntry|RadioButton|RadioMenuItem|Range|Requisition|RcStyle|Ruler|Scale|Scrollbar|ScrolledWindow|Separator|SeparatorMenuItem|Settings|ShadowType|SizeGroup|Socket|SpinButton|StatusBar|Style|Table|TearoffMenuItem|Text|TextBuffer|TextChildAnchor|TextIter|TextMark|TextTag|TextTagTable|TextView|TextWindowType|TipsQuery|ToggleActionEntry|ToggleButton|Toolbar|ToolItem|Tooltips|Tree|TreeDragDest|TreeDragSource|TreeItem|TreeIter|TreeModel|TreeModelSort|TreePath|TreeRowReference|TreeSelection|TreeSortable|TreeStore|TreeView|TreeViewColumn|UIManager|VBox|VButtonBox|Viewport|VPaned|VRuler|VScale|VScrollbar|VSeparator|Window|WindowGroup|WindowPosition|WrapMode))\\b::2::#990000::2:0:
-c:glib-basictypes:0:\\b(gu?int(8|16|32|64)?|gshort|gushort|glong|gulong|gfloat|gdouble|gchar|guchar|gunichar|gpointer|gconstpointer|gboolean|gsize|gssize)\\b::2::#990000::2:0:
-c:glib-keywords:0:\\b(GArray|GCallback|GClosure|GDate|GDir|GError|GFlagsValue|GHashTable|GIOChannel|GIOStatus|GList|GMarkupParseFlags|GMarkupParser|GMarkupParseContext|GObject|GObjectClass|GObjectConstructParam|GParamSpec|GPatternSpec|GPtrArray|GQuark|GSList|GString|GTimer|GTree|GType|GTypeInfo|GValue)\\b::2::#990000::2:0:
-c:gdk-keywords:0:\\b(Gdk(Color|DragContext|Event|EventButton|EventExpose|EventKey|Pixbuf|Rectangle|Window))\\b::2::#990000::2:0:
-c:braces:0:[{}]::2::#000000::2:0:
-c:character:0:':':1::#009900::0:0:
-c:character-escape:0:\\\\.::2:^character$:#000099::0:0:
-c:defines:0:\\b(NULL|TRUE|FALSE)\\b::2::#999900::2:0:
-c:numbers:1:\\b\\d+\\b::2::#009900::0:0:
-c:error-comment:1:\\*/::2::#ffffff:#990000:0:0:
+c:String:0:":":1::#009900::0:0:
+c:String Escape:0:\\\\(n|t|v|b|r|f|a|\\\\|\\?|'|"|\\d{1,3}|x\\d+)::2:^string$:#990099::0:0:
+c:Preprocessor:0:#(include|define|if(def|ndef)?|else|elif|endif|undef)::2::#990099::0:0:
+c:Comment (C):0:/\\*:\\*/:1:^(top|preprocessor)$:#0000FF::1:2:
+c:Comment (C99/C++):0://.*?$::2:^(top|preprocessor)$:#0000FF::1:2:
+c:Keywords:0:\\b(break|case|continue|default|do|else|for|goto|if|return|sizeof|switch|while)\\b::2::#009999::2:0:
+c:Storage Keywords:0:\\b(auto|char|const|double|enum|extern|FILE|float|int(8|16|32|64)?|long|register|short|signed|size_t|static|struct|typedef|union|unsigned|void|volatile)\\b::2::#000099::2:0:
+c:GTK Keywords:0:\\b(Gtk(Widget|AccelLabel|AccelGroup|AccelMap|Accessible|Action|ActionEntry|ActionGroup|Adjustment|Alignment|Allocation|Arrow|AspectFrame|Bin|Box|Button|ButtonBox|Calendar|CellEditable|CellEditableIface|CellRenderer|CellRenderPixbuf|CellRendererState|CellRendererText|CellRendererToggle|CheckButton|Clipboard|CList|ColorButton|ColorSelection|ColorSelectionDialog|Combo|ComboBox|ComboBoxEntry|Container|CTree|Curve|Dialog|DrawingArea|Editable|Entry|EventBox|FileChooserAction|FileFilter|FileFilterFlags|FileSelectionDialog|Fixed|FontButton|FontSelection|FontSelectionDialog|Frame|GammaCurve|HandleBox|HBox|HButtonBox|HPaned|HRuler|HScale|HScrollbar|HSeparator|IconFactory|IconSet|IconSource|Image|ImageMenuItem|IMContext|IMContextSimple|IMMulticontext|InputDialog|Invisible|ItemFactory|ItemFactoryEntry|Label|Layout|List|ListItem|ListStore|Menu|MenuBar|MenuItem|MenuShell|MessageDialog|Misc|Notebook|Object|OldEditable|OptionMenu|Paned|Pixmap|Plug|Preview|Progress|ProgressBar|RadioActionEntry|RadioButton|RadioMenuItem|Range|Requisition|RcStyle|Ruler|Scale|Scrollbar|ScrolledWindow|Separator|SeparatorMenuItem|Settings|ShadowType|SignalFunc|SizeGroup|Socket|SpinButton|StateType|StatusBar|Style|Table|TearoffMenuItem|Text|TextBuffer|TextChildAnchor|TextIter|TextMark|TextTag|TextTagTable|TextView|TextWindowType|TipsQuery|ToggleActionEntry|ToggleButton|Toolbar|ToolItem|Tooltips|Tree|TreeDragDest|TreeDragSource|TreeItem|TreeIter|TreeModel|TreeModelIface|TreeModelSort|TreePath|TreeRowReference|TreeSelection|TreeSortable|TreeStore|TreeView|TreeViewColumn|UIManager|VBox|VButtonBox|Viewport|VPaned|VRuler|VScale|VScrollbar|VSeparator|Window|WindowGroup|WindowPosition|WrapMode))\\b::2::#990000::2:0:
+c:Glib basictypes:0:\\b(gu?int(8|16|32|64)?|gshort|gushort|glong|gulong|gfloat|gdouble|gchar|guchar|gunichar|gpointer|gconstpointer|gboolean|gsize|gssize)\\b::2::#990000::2:0:
+c:Glib Keywords:0:\\b(GArray|GCallback|GClassInitFunc|GClosure|GCompareFunc|GDate|GDir|GEnumValue|GError|GFlagsValue|GHashTable|GInstanceInitFunc|GIOChannel|GIOStatus|GList|GMarkupParseFlags|GMarkupParser|GMarkupParseContext|GObject|GObjectClass|GObjectConstructParam|GParamSpec|GPatternSpec|GPtrArray|GQuark|GSignalAccumulator|GSList|GString|GTimer|GTree|GType|GTypeInfo|GValue)\\b::2::#990000::2:0:
+c:GDK Keywords:0:\\b(Gdk(Color|Colormap|CursorType|Display|DragContext|Drawable|Event|EventAny|EventButton|EventCrossing|EventExpose|EventFocus|EventKey|EventScroll|Pixbuf|Pixdata|Pixmap|Rectangle|Region|Screen|Window|WindowAttr))\\b::2::#990000::2:0:
+c:Braces:0:[{}]::2::#000000::2:0:
+c:Character:0:':':1::#009900::0:0:
+c:Character Escape:0:\\\\.::2:^character$:#000099::0:0:
+c:Defines:0:\\b(NULL|TRUE|FALSE)\\b::2::#999900::2:0:
+c:Numbers:1:\\b\\d+\\b::2::#009900::0:0:
+c:Error Comment:1:\\*/::2::#ffffff:#990000:0:0:
 cfml:CFML:1:<((/)?cf):>:1::#AC0C0c::0:0:
 cfml:CFML Attributes:1:("[^"]*")::2:^CFML$:#4399D7::0:0:
 cfml:HTML:1:<((/)?[a-z0-9]+):>:1::#0000EE::0:0:
