--- a/bluefish/data/bluefish.desktop.in
+++ b/bluefish/data/bluefish.desktop.in
@@ -7,4 +7,5 @@ Terminal=false
 Type=Application
 Categories=Application;Development;
 Encoding=UTF-8
+StartupNotify=true
 MimeType=text/html;text/css;text/x-javascript;text/x-python;text/x-perl;application/x-php;text/x-java;application/bluefish-project;text/javascript;text/x-php;application/x-cgi;application/x-javascript;application/x-perl;application/x-python;application/xhtml+xml;text/mathml;text/x-csrc;text/x-chdr;text/x-dtd;text/x-sql;text/xml;
