working on gnome 2.8 integration in the build system, but not yet finsihed
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1661 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -58,6 +58,10 @@ install: all
 	if [ -d $(gnome1menupath) ] ; then \
 		$(INSTALL_DIR) $(DESTDIR)$(gnome1menupath)/Applications ;\
 		$(INSTALL_DATA) bluefish.desktop $(DESTDIR)$(gnome1menupath)/Applications ;\
+	else \
+		if [ ! "x$(gnome1menupath)" = "xnone" ]; then \
+			echo "The gnome1 menu directory $(gnome1menupath) does not exist" ;\
+		fi \
 	fi
 	if [ -d $(gnome2appreg) ] ; then \
 		$(INSTALL_DATA) bluefish.applications $(DESTDIR)$(gnome2appreg) ;\
