-m64 does not work on a i386 machine
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1662 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -102,7 +102,7 @@ AC_ARG_ENABLE(auto-optimization,
 			elif echo $UNAMEP|grep -i -q "AMD Athlon(TM) MP"; then
 				MARCH="-march=athlon-mp -mfpmath=sse -mmmx -msse -m3dnow"
 			elif echo $UNAMEP|grep -i -q "AMD Athlon(tm) 64"; then
-				MARCH="-march=k8 -m64"
+				MARCH="-march=k8"
 			else
 				MARCH=""
 			fi
