locales are now installed again
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1667 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/po/Makefile.in
+++ b/bluefish/po/Makefile.in
@@ -43,11 +43,12 @@ all-no:
 
 install:
 	$(INSTALL_DIR) $(DESTDIR)$(localedir)
-	@for lang in $(ALL_LINGUAS) ; do \
-		if test -f ${lang}.po; then \
+	for lang in $(ALL_LINGUAS) ; do \
+		if test -f $${lang}.po; then \
 			$(INSTALL_DIR) $(DESTDIR)$(localedir)/$${lang}/ ;\
 			$(INSTALL_DIR) $(DESTDIR)$(localedir)/$${lang}/LC_MESSAGES/ ;\
 			$(INSTALL_DATA) $${lang}.gmo $(DESTDIR)$(localedir)/$${lang}/LC_MESSAGES/${PACKAGE}.mo;\
+			echo "installing $${lang}" ;\
 		fi ;\
 	done
 
