usr/bin/ginstall -c -m 644 bluefish.desktop /usr/share/applications no make[1]: no: Command not found make[1]: *** [install] Error 127 make[1]: Leaving directory /home/ajlewis2/bluefish-gtk2/data' make: *** [install] Error 2
## fixed ##


git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1670 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -421,6 +421,9 @@ if test "x$WITHGNOME2" = "xyes" ; then
 		else
 			echo "no"
 		fi
+#		echo "UPDATE_MIME $(UPDATE_MIME)"
+		AC_SUBST(UPDATE_MIME_PATH, UPDATE_MIME)
+		AC_SUBST(UPDATE_DESKTOP_PATH, UPDATE_DESKTOP)
 	fi
 fi
 
