this enables menu install in a weird situation where update-mime-database is found, but update-desktop-database is not
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1680 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -436,12 +436,14 @@ if test "x$WITHGNOME2" != "xno" ; then
 			echo "${GNOME2PREFIX}/share/applications"
 			GNOME2MENU=${GNOME2PREFIX}/share/applications
 			AC_SUBST(GNOME2MENU)
+			INSTALLDATA="$INSTALLDATA install-gnome2-menu"
 		else
 			if test -d ${GNOME2PREFIX}/applications ; then
 				# future FreeBSD default ?
 				echo "${GNOME2PREFIX}/applications"
 				GNOME2MENU=${GNOME2PREFIX}/applications
 				AC_SUBST(GNOME2MENU)
+				INSTALLDATA="$INSTALLDATA install-gnome2-menu"
 			else
 				echo "no"
 			fi
