uninstall  removes the icon and the splash now
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@1681 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -89,4 +89,6 @@ uninstall:
 	@cd src/ && $(MAKE) uninstall
 	@cd po/ && $(MAKE) uninstall
 	@cd data/ && $(MAKE) uninstall
+	rm -f $(pkgdatadir)/bluefish_splash.png
+	rm -f $(iconpath)/bluefish-icon.png
 	/bin/rmdir $(DESTDIR)$(pkgdatadir)
