AC_PREFIX_DEFAULT("/usr/local") is not needed (/usr/local is the default)
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1682 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -524,7 +524,9 @@ dnl AC_SUBST(GNOME1MENUPATH)
 dnl AC_SUBST(GNOME2PREFIX)
 dnl AC_SUBST(HAVE_GNOME_VFS)
 
-AC_PREFIX_DEFAULT("/usr/local")
+dnl AC_PREFIX_DEFAULT("/usr/local")
+dnl you only need this macro if you want something other then /usr/local
+dnl 
 
 if test "${prefix}" == "NONE"; then
 	prefix=${ac_default_prefix}
